--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
+aiohttp==3.8.3
+aiosignal==1.3.1
+altgraph==0.17.3
+asgiref==3.6.0
+async-timeout==4.0.2
+attrs==22.2.0
+beautifulsoup4==4.11.2
+black==22.12.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
 discord.py==2.1.0
+Django==4.1.5
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
+frozenlist==1.3.3
+future==0.18.2
+greenlet==2.0.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+multidict==6.0.4
+mypy-extensions==0.4.3
 openai==0.27.2
+pathspec==0.11.0
+pefile==2022.5.30
+platformdirs==2.6.2
+playsound==1.3.0
+playwright==1.31.0
+pyee==9.0.4
+pyinstaller==5.8.0
+pyinstaller-hooks-contrib==2022.14
+PySimpleGUI==4.60.4
 pytube==12.1.2
-ffmpy=="0.3.0"
-berserk=="0.10.0"
-RiotWatcher=="3.2.4"
+pywin32-ctypes==0.2.0
